@@ -3,6 +3,16 @@ X3 ChangeLog
 
 2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
 
+	* src/mod-python.c: refactor python_handle_new_user.
+
+	* src/modpython.py: refactor new_user handler to use new plugin
+	system.
+
+	* src/plugins/__init__.py: add empty new_user handler function to
+	Plugin class.
+
+2009-10-12  Henrik Stuart <evilnet@hstuart.dk>
+
 	* src/mod-python.c: refactor python_handle_server_link to be more
 	Pythonic.
 
